# ethyca-tic-tac-toe

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
ethyca_project/: conftest.py
ethyca_project/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
ethyca_project/core/: mixins.py
ethyca_project/games/: apps.py  enums.py  models.py  services.py
ethyca_project/games/api/: serializers.py  viewsets.py
ethyca_project/games/migrations/: 0001_initial.py
ethyca_project/templates/: base.html
ethyca_project/templates/drf_spectacular/: swagger_ui.html
ethyca_project/users/: adapters.py  apps.py  models.py  services.py  views.py
ethyca_project/users/api/: serializers.py  views.py
ethyca_project/users/management/commands/: create_user.py
ethyca_project/users/migrations/: 0001_initial.py
ethyca_project/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
ethyca_project/users/tests/api/: test_urls.py  test_views.py
